--- a/app.yaml
+++ b/app.yaml
@@ -4,7 +4,10 @@ runtime: python
 api_version: 1
 
 handlers:
+- url: /
+  static_files: html/index.html
+  upload: html/(.*)
+
 - url: /(.*)
   static_files: html/\1.html
   upload: html/(.*)
-
