--- a/app.yaml
+++ b/app.yaml
@@ -8,6 +8,10 @@ handlers:
   static_files: html/index.html
   upload: html/(.*)
 
+- url: /favicon.ico
+  static_files: static/favicon.ico
+  upload: static/(.*)
+
 - url: /current
   static_files: html/current.html
   upload: html/(.*)
