--- a/app.yaml
+++ b/app.yaml
@@ -12,6 +12,10 @@ handlers:
   static_files: static/favicon.ico
   upload: static/(.*)
 
+- url: /(.*)
+  static_files: html/index.html
+  upload: html/(.*)
+
 - url: /current
   static_files: html/current.html
   upload: html/(.*)
